--- a/code/eda_shark_depth.Rmd
+++ b/code/eda_shark_depth.Rmd
@@ -40,43 +40,134 @@ library(tidyverse)
 shark_tp_data
 ```
 
-
-# Depth 
-
+## Depth overview - by individual
 ```{r}
 shark_tp_data %>% 
+  ggplot() +
+  geom_point(aes(x = detection_timestamp, y = Depth)) +
+  scale_y_reverse() +
+  facet_wrap(~ transmitter_id)
+
+shark_tp_data %>% 
+  ggplot() +
+  geom_point(aes(x = detection_timestamp, y = Depth)) +
+  scale_y_reverse() +
+  facet_wrap(~ transmitter_id)
+```
+
+## Depth overview - by receiver station
+```{r}
+shark_tp_data %>% 
+  #filter(transmitter_id == "A69-9004-14037") %>%  # If you want to look at one individual
+  ggplot() +
+  geom_point(aes(x = detection_timestamp, y = Depth)) +
+  scale_y_reverse() +
+  facet_wrap(~ station_name_long)
+
+shark_tp_data %>% 
+  #filter(transmitter_id == "A69-9004-14037") %>%  # If you want to look at one individual
+  ggplot() +
+  geom_point(aes(x = detection_timestamp, y = Depth)) +
+  scale_y_reverse() +
+  facet_wrap(~ station_name)
+```
+
+# Shark depth - daily summary
+```{r}
+shark_daily_depths <- 
+  shark_tp_data %>% 
   mutate(date = date(detection_timestamp),
          year_week = str_c(str_sub(isoyear(date), 3, 4),  "/", formatC(isoweek(date), format = "f", digits = 0, width = 2, flag = "0"))) %>% 
   filter(!is.na(Depth)) %>% 
-  group_by(year_week) %>% 
-  summarise(weekly_max_depth = max(Depth),
-            weekly_min_depth = min(Depth),
-            weekly_mean_depth = mean(Depth))
+  group_by(date) %>% 
+  summarise(daily_max_depth = max(Depth),
+            daily_min_depth = min(Depth),
+            daily_mean_depth = mean(Depth)) %>% 
+  mutate(daily_min_depth = if_else(daily_min_depth <0, 0, daily_min_depth))
 
+save(shark_daily_depths, file = "../data/Rdata/shark_daily_depths.Rdata")
 ```
 
 
 
+## Plot
+```{r}
+depth_plot <- 
+shark_daily_depths %>%   
+  ggplot() +
+  geom_line(aes(x = date, y = daily_min_depth), colour = "skyblue") +
+  #geom_smooth(aes(x = date, y = daily_min_depth), colour = "blue",  method = "gam", formula = y ~ s(x, bs = 'cs')) + # method = "gam" implements mgcv
+  geom_line(aes(x = date, y = daily_mean_depth), colour = "dodgerblue") +
+  geom_smooth(aes(x = date, y = daily_mean_depth), colour = "dodgerblue",  method = "gam", formula = y ~ s(x, bs = 'cs')) +
+  geom_line(aes(x = date, y = daily_max_depth), colour = "midnightblue") +
+  geom_smooth(aes(x = date, y = daily_max_depth), colour = "midnightblue",  method = "gam", formula = y ~ s(x, bs = 'cs'), level = 0.95) +
+  #geom_smooth(aes(x = date, y = daily_max_depth), colour = "red") + # Basic smooth, rather than gam
+  theme_gray() +
+  scale_y_reverse() +
+  #scale_x_date(date_breaks = "1 months", date_labels = '%Y-%m') +
+  #theme(axis.text.x = element_text(angle = 45)) +
+  theme(axis.text.x = element_blank()) +
+  theme(axis.title.x = element_blank()) +
+  theme(axis.ticks.x = element_blank()) +
+  #xlab("Date") +
+  ylab("Depth \n (m below sealevel)")
+
+depth_plot
+```
+
+
+
+
+# Depth - weekly values
 ```{r}
 shark_tp_data %>% 
   mutate(date = date(detection_timestamp),
-         year_week = str_c(str_sub(isoyear(date), 3, 4),  "/", formatC(isoweek(date), format = "f", digits = 0, width = 2, flag = "0"))) %>% 
+         year_week = as.double(str_c(str_sub(isoyear(date), 1, 4),  ".", formatC(isoweek(date), format = "f", digits = 0, width = 2, flag = "0")))) %>% 
+  #mutate(year_week = as.double(year_week)) %>% 
   filter(!is.na(Depth)) %>% 
   group_by(year_week) %>% 
   summarise(weekly_max_depth = max(Depth),
             weekly_min_depth = min(Depth),
             weekly_mean_depth = mean(Depth)) %>% 
+  mutate(weekly_min_depth = if_else(weekly_min_depth <0, 0, weekly_min_depth))
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+```{r}
+shark_tp_data %>% 
+  mutate(date = date(detection_timestamp),
+         year_week = as.double(str_c(str_sub(isoyear(date), 1, 4),  ".", formatC(isoweek(date), format = "f", digits = 0, width = 2, flag = "0")))) %>% 
+  #mutate(year_week = as.double(year_week)) %>% 
+  filter(!is.na(Depth)) %>% 
+  group_by(year_week) %>% 
+  summarise(weekly_max_depth = max(Depth),
+            weekly_min_depth = min(Depth),
+            weekly_mean_depth = mean(Depth)) %>% 
+  mutate(weekly_min_depth = if_else(weekly_min_depth <0, 0, weekly_min_depth)) %>% 
   ggplot() +
-  geom_point(aes(x = year_week, y = weekly_max_depth)) +
-  #geom_point(aes(x = date, y = roll_mean), data = SST_comb3, colour = "blue") +
-  #geom_line(aes(x = date, y = roll_mean), data = SST_comb3, colour = "blue") 
-  #geom_smooth(aes(x = date, y = weekly_max_depth)) +
+  geom_point(aes(x = year_week, y = weekly_min_depth), colour = "blue") +
+  geom_point(aes(x = year_week, y = weekly_mean_depth), colour = "grey30") +
+  geom_point(aes(x = year_week, y = weekly_max_depth), colour = "red") +
+  geom_line(aes(x = year_week, y = weekly_max_depth), colour = "red") +
+  geom_smooth(aes(x = year_week, y = weekly_max_depth)) +
   scale_y_reverse() 
 ```
 
 
 ```{r}
-max_dep_plot <- 
+daymax_dep_plot <- 
 shark_tp_data %>% 
   mutate(date = date(detection_timestamp)) %>% 
   filter(!is.na(Depth)) %>% 
@@ -86,7 +177,7 @@ shark_tp_data %>%
             daily_mean_depth = mean(Depth)) %>% 
   ungroup() %>% 
   ggplot() +
-  geom_point(aes(x = date, y = max_depth)) +
+  geom_point(aes(x = date, y = daily_max_depth)) +
   #geom_point(aes(x = date, y = roll_mean), data = SST_comb3, colour = "blue") +
   #geom_line(aes(x = date, y = roll_mean), data = SST_comb3, colour = "blue") 
   #geom_smooth(aes(x = date, y = max_depth)) +
@@ -95,7 +186,7 @@ shark_tp_data %>%
 
 
 ```{r}
-max_dep_plot/SST_plot
+daymax_dep_plot/SST_plot
 ```
 
 
